2008-10-31  Stefan Jahn  <stefan@lkcc.org>

	* EKV26pMOS.cpp, EKV26nMOS.cpp: Removed these files.

	* EKV26MOS.cpp (info_pmos): Changing default values for PMOS type
	model.

2008-10-28  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (createSymbol): Added 'Varactor' symbol mode.

2008-10-11  Stefan Jahn  <stefan@lkcc.org>

	* rectline.cpp (RectLine): Added 'Material' parameter.

2008-10-09  Stefan Jahn  <stefan@lkcc.org>

	* photodiode.cpp (photodiode): Added new photodiode model.  Thanks
	to Mike Brinson!

2008-10-02  Stefan Jahn  <stefan@lkcc.org>

	* hicumL2V2p23.cpp (hicumL2V2p23): Added new HICUM/L2 v2.23 model.

2008-09-28  Stefan Jahn  <stefan@lkcc.org>

	* EKV26pMOS.cpp (EKV26pMOS): Added new property 'Xpart'.

2008-09-20  Stefan Jahn  <stefan@lkcc.org>

	* hic0p2_full.cpp (hic0p2_full): Added new HICUM/L0 v1.2 model.

2008-06-26  Stefan Jahn  <stefan@lkcc.org>

	* rectline.cpp (RectLine): Added new rectangular waveguide
	provided by Bastien.

2008-06-14  Stefan Jahn  <stefan@lkcc.org>

	* EKV26pMOS.cpp (EKV26pMOS), EKV26nMOS.cpp (EKV26nMOS): Added new
	EPFL-EKV MOSFET V2.6 models.  Thanks to Mike Brinson!

2008-04-01  Stefan Jahn  <stefan@lkcc.org>

	* MESFET.cpp (MESFET): Added new MESFET Verilog-A device.  Thanks
	to Mike Brinson!

2008-03-31  Stefan Jahn  <stefan@lkcc.org>

	* sp_sim.cpp (recreate), param_sweep.cpp (recreate), tr_sim.cpp
	(recreate), ac_sim.cpp (recreate): Fixed graphical bug (property
	display) when changing from lin/log to const/list by cursor keys.

2008-02-21  Stefan Jahn  <stefan@lkcc.org>

	* rfedd2p.cpp (RFedd2P): Added new 2-port RF-EDD also containing
	H-, G- and A-parameters.

2008-02-17  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp (RFedd): Added preliminary implementation of an
	equation defined RF device.

2008-02-08  Stefan Jahn  <stefan@lkcc.org>

	* potentiometer.cpp (potentiometer): Added new Potentiometer
	Verilog-A model.  Thanks to Mike!

2008-01-25  Stefan Jahn  <stefan@lkcc.org>
